--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ h1{
     border: 2px solid black;
     margin:auto;
     background-image: url("/Images/bg.jpg");
+    /* color:red */
 }
 #character{ 
     width: 75px;
