--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,14 @@ h1{
     height: 300px;
     border: 2px solid black;
     margin:auto;
-    background-image: url("/images/bg.jpg");
+    background-image: url("images/bg.jpg");
 }
 #character{ 
     width: 75px;
     height: 75px;
     position: relative;
     top: 225px;
-    background-image: url("/images/character.webp");
+    background-image: url("images/character.webp");
     background-size: cover;
 }
 .animate{
@@ -31,7 +31,7 @@ h1{
 #block{
     width: 80px;
     height: 80px;
-    background-image: url("/images/cactus.png");
+    background-image: url("images/cactus.png");
     background-size: cover;
     position: relative;
     top: 145px;
